[gd_scene load_steps=2 format=3 uid="uid://v6shx7bog0xb"]

[ext_resource type="Script" path="res://LyricLine/lyric_line.gd" id="1_lqp7a"]

[node name="LyricsLine" type="Control"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 3
anchors_preset = 0
offset_right = 1149.0
offset_bottom = 61.0
script = ExtResource("1_lqp7a")

[node name="LyricContainer" type="HBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10
alignment = 1

[node name="HighlightControl" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HighlightClip" type="ColorRect" parent="HighlightControl"]
unique_name_in_owner = true
clip_children = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HighlightContainer" type="HBoxContainer" parent="HighlightControl/HighlightClip"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
grow_vertical = 2
theme_override_constants/separation = 10
alignment = 1
